# django-redis-consumergroup

./: .gitignore  README.md  Vagrantfile  manage.py  pytest.ini  requirements.txt  setup.cfg
drcg/: admin.py  apps.py  models.py  redis.py  redis_client.py  tasks.py  validators.py  views.py
drcg/management/commands/: consumer.py  scheduler.py
drcg/migrations/: 0001_initial.py  0002_alter_intervaltask_ready_time.py  0002_scheduler_group_name.py  0003_alter_intervaltask_last_message_id.py  0003_remove_scheduler_group_name_and_more.py  0004_alter_intervaltask_function_name_and_more.py  0004_alter_scheduler_consumergroup.py  0005_alter_intervaltask_function_args.py  0006_redisconsumer_redisconsumergroup_redisstream_and_more.py  0007_rename_function_args_scheduler_task_args_and_more.py
drcg/templates/drcg/: redis-admin.html
integration_test_project/: asgi.py  settings.py  urls.py  wsgi.py
integration_test_project/integration_test_app/: apps.py  tasks.py  tests.py
