[metadata]
name = django-redis-consumergroup
version = 0.0.5
description = A lightweight and reliable task queue implemented using Redis Streams and ConsumerGroups
long_description = file: README.md
url = https://github.com/pphysch/django-redis-consumergroup
author = Paul Fischer
author_email = pphysch@pm.me
license = GNU GPLv3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = drcg, drcg.migrations, drcg.management, drcg.management.commands
python_requires = >=3.9
install_requires =
    Django >= 4.0
    Redis